Fixed issue 43015: Fixed Counted, Remaining and Surplus labels alignment in count cash

--- a/web/org.openbravo.retail.posterminal/css/obpos-main.css
+++ b/web/org.openbravo.retail.posterminal/css/obpos-main.css
@@ -14046,7 +14046,7 @@ li.obUiListOrders-orderSelector_obOrder:last-child > button > div > div:last-chi
 .obObposCashupUiCashPayments-wrapper-components-body-footer {
   display: grid;
   grid-template-areas: 'obObposCashupUiCashPayments-wrapper-components-body-footer-container1 obObposCashupUiCashPayments-wrapper-components-body-footer-container2'
-                       'obObposCashupUiCashPayments-wrapper-components-body-footer-container3 obObposCashupUiCashPayments-wrapper-components-body-footer-container3';
+                       'obObposCashupUiCashPayments-wrapper-components-body-footer-container4 obObposCashupUiCashPayments-wrapper-components-body-footer-container3';
   grid-gap: 10px;
   grid-template-columns: 1fr 1fr;
 
@@ -14064,13 +14064,12 @@ li.obUiListOrders-orderSelector_obOrder:last-child > button > div > div:last-chi
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   overflow: auto;
 }
 
 .obObposCashupUiCashPayments-wrapper-components-body-footer-container1-totalLbl {
   overflow: hidden;
-  padding-right: 30px;
 }
 
 .obObposCashupUiCashPayments-wrapper-components-body-footer-container1-total {
@@ -14085,35 +14084,45 @@ li.obUiListOrders-orderSelector_obOrder:last-child > button > div > div:last-chi
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: space-between;
   overflow: auto;
 }
 
 .obObposCashupUiCashPayments-wrapper-components-body-footer-container2-countedLbl {
-  overflow: hidden;	
+  overflow: hidden;
 }
 
 .obObposCashupUiCashPayments-wrapper-components-body-footer-container2-counted {
   /*Inherits: [OB.OBPOSCashUp.UI.RenderTotal]*/
-  padding-left: 30px;
   overflow: hidden;
+  padding-left: 5px;
+  flex-grow: 1;
+}
+
+.obObposCashupUiCashPayments-wrapper-components-body-footer-container4 {
+  grid-area: obObposCashupUiCashPayments-wrapper-components-body-footer-container4;
 }
 
 .obObposCashupUiCashPayments-wrapper-components-body-footer-container3 {
   grid-area: obObposCashupUiCashPayments-wrapper-components-body-footer-container3;
   text-align: right;
   line-height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  overflow: auto;
 }
 
 .obObposCashupUiCashPayments-wrapper-components-body-footer-container3-differenceLbl {
-  display: inline-block;
+  overflow: hidden;
 }
 
 .obObposCashupUiCashPayments-wrapper-components-body-footer-container3-difference {
   /*Inherits: [OB.OBPOSCashUp.UI.RenderTotal]*/
-  display: inline-block;
-  padding: 0px 0px 0px 5px;
-  min-width: 20%;
+  overflow: hidden;
+  padding-left: 5px;
+  flex-grow: 1;
 }
 
 
